Closed
Bug 1625489
Opened 6 years ago
Closed 5 years ago
Speak list bullets/numbers in VoiceOver
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla77
| Tracking | Status | |
|---|---|---|
| firefox77 | --- | verified |
People
(Reporter: eeejay, Assigned: eeejay)
Details
(Whiteboard: [mac2020_1])
Attachments
(1 file)
STR:
- Load
data:text/html,<ol style="list-style-type: lower-alpha;"><li>Cats</li><li>Dogs</li><li>Birds</li></ol> - Navigate through list
Expected:
User should hear list items prefixed with their numbers or letters.
eg. "b. Dogs, 2 of 3"
Actual:
User only hears the content of the list item and the position in the list.
eg. "Dogs, 2 of 3"
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → eitan
| Assignee | ||
Updated•6 years ago
|
Priority: P2 → P1
| Assignee | ||
Comment 1•5 years ago
|
||
I also simplified mozTextLeafAccessible by redirecting value to title. And removing some dead methods. It previously was calling Text() on the text accessible, but this is not necessary since Name() returns
the same value.
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8866eea63b57
role::STATICTEXT should return value and not label or title. r=morgan
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Updated•5 years ago
|
Flags: qe-verify+
Comment 4•5 years ago
|
||
Confirmed issue with 76.0a1(20200327215207) on macOS 10.15.3.
Fix verified with 77.0b3.
You need to log in
before you can comment on or make changes to this bug.
Description
•