Bug 1625489 - role::STATICTEXT should return value and not label or title. r=morgan

I also simplified mozTextLeafAccessible by redirecting value to title. And removing some dead methods. It previously was calling Text() on the text accessible, but this is not necessary since Name() returns
the same value.

Differential Revision: https://phabricator.services.mozilla.com/D72584