accessible/mac/AccessibleWrap.mm
@@ -203,7 +203,6 @@ Class a11y::GetTypeFromRole(roles::Role aRole) {
       return [mozTabGroupAccessible class];
 
     case roles::ENTRY:
-    case roles::STATICTEXT:
     case roles::CAPTION:
     case roles::ACCEL_LABEL:
     case roles::PASSWORD_TEXT:
@@ -211,6 +210,7 @@ Class a11y::GetTypeFromRole(roles::Role aRole) {
       return [mozTextAccessible class];
 
     case roles::TEXT_LEAF:
+    case roles::STATICTEXT:
       return [mozTextLeafAccessible class];
 
     case roles::LINK:
